<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.binqing.utilproject.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:use_type="use_padding_top">
        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/color_first_black"
                android:textSize="22dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_account"
                android:background="@null"
                android:hint="@string/enter_account"
                android:inputType="textEmailAddress"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_account"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>
        </RelativeLayout>


        <View
            android:id="@+id/account_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/rl_account"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/color_theme"></View>

        <TextView
            android:id="@+id/tv_tip_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_account"
            android:textColor="@color/color_theme"
            android:textSize="15dp"
            android:visibility="visible"/>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_account"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_password"
                android:background="@null"
                android:hint="@string/enter_pswd"
                android:inputType="text|textPassword"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>


        </RelativeLayout>
        <View
            android:id="@+id/passwod_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/rl_password"
            android:background="@color/color_theme"></View>

        <RelativeLayout
            android:id="@+id/rl_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_account"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_password_check"
                android:background="@null"
                android:hint="@string/check_password"
                android:inputType="text|textPassword"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_password_check"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>


        </RelativeLayout>

        <View
            android:id="@+id/passwod_check_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/rl_password"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/color_theme"></View>

        <TextView
            android:id="@+id/tv_tip_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_modify_password"
            android:textColor="@color/color_theme"
            android:textSize="15dp"
            android:visibility="visible"/>

        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_phone"
                android:background="@null"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>
        </RelativeLayout>

        <View
            android:id="@+id/phone_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/rl_account"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/color_theme"></View>

        <TextView
            android:id="@+id/tv_tip_account_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tip_account_phone"
            android:textColor="@color/color_theme"
            android:textSize="15dp"
            android:visibility="visible"/>

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/color_unSign"
            android:text="@string/sign_up"
            android:textColor="@color/color_unsign_text"
            android:textSize="20dp"/>

    </com.binqing.utilproject.view.StatusBarHeightView>



</RelativeLayout>
