<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.lufan.parityproject.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:use_type="use_padding_top">
        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_back"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_account"
                android:background="@null"
                android:hint="@string/enter_account"
                android:inputType="text|textEmailAddress"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_account"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>
        </RelativeLayout>


        <View
            android:id="@+id/account_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/rl_account"
            android:background="@color/color_theme"></View>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_below="@id/rl_account"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_clear_password"
                android:background="@null"
                android:hint="@string/enter_pswd"
                android:inputType="text|textPassword"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/iv_clear_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_clear"/>


        </RelativeLayout>
        <View
            android:id="@+id/passwod_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/rl_password"
            android:background="@color/color_theme"></View>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/color_unSign"
            android:textColor="@color/color_unsign_text"
            android:textSize="20dp"
            android:text="@string/login"/>

        <RelativeLayout
            android:id="@+id/rl_forget_signup"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/color_second_black"
                android:text="@string/sign_up"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textSize="18dp"
                android:textColor="@color/color_second_black"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </com.lufan.parityproject.view.StatusBarHeightView>



</RelativeLayout>
