<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/color_white">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider"
        android:orientation="horizontal">

    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rl_content_tab"
        android:background="@color/divider_color"></View>

    <LinearLayout
        android:id="@+id/rl_content_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_statusbar"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_home_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_home"
                android:textSize="28dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_home"
                android:layout_centerHorizontal="true"
                android:text="@string/text_parity"
                android:textSize="14dp"
                android:layout_marginBottom="8dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_category_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_search"
                android:textSize="28dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_category"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/text_category"
                android:textSize="14dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mine_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_mine"
                android:textSize="28dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_mine"
                android:layout_centerHorizontal="true"
                android:text="@string/text_mine"
                android:textSize="14dp"
                android:layout_marginBottom="8dp"/>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
