<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/color_statusbar"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.lufan.parityproject.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:use_type="use_padding_top">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="@color/color_first_black"
            android:text="@string/text_mine"/>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@+id/rl_content_tab"
            android:background="@color/divider_color"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color_mine_background">

            <RelativeLayout
                android:id="@+id/rl_sign_in"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_white">

                <TextView
                    android:id="@+id/tv_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="点击登录"
                    android:textColor="@color/color_first_black"
                    android:textSize="19dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_click"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:text="登录后体验更多功能"
                    android:textColor="@color/color_first_black"
                    android:textSize="16dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_content_signin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_white"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:text="欢迎您，尊敬的"
                    android:textColor="@color/color_first_black"
                    android:textSize="19dp"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/iv_right"
                    android:layout_toRightOf="@id/tv_welcome"
                    android:text="Parity123123123"
                    android:textColor="@color/color_first_black"
                    android:textSize="19dp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_right"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_modify"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_modify"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:id="@+id/tv_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_modify"
                    android:text="@string/modify"
                    android:textColor="@color/color_first_black"
                    android:textSize="18dp"/>

                <ImageView
                    android:id="@+id/iv_right2"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_right"/>
            </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_above="@+id/rl_content_tab"
                android:background="@color/divider_color"></View>

            <RelativeLayout
                android:id="@+id/rl_collection"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/color_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_collecion"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:id="@+id/tv_collecion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_collecion"
                    android:text="@string/collection"
                    android:textColor="@color/color_first_black"
                    android:textSize="18dp"/>

                <ImageView
                    android:id="@+id/iv_right3"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_right"/>
            </RelativeLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_above="@+id/rl_content_tab"
                android:background="@color/divider_color"></View>

        </LinearLayout>
    </com.lufan.parityproject.view.StatusBarHeightView>

</LinearLayout>
